--- a/woorischool/Views/Cells/TeacherHomeTableViewCell.xib
+++ b/woorischool/Views/Cells/TeacherHomeTableViewCell.xib
@@ -26,7 +26,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="386" height="223"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jhs-8X-aZ0" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jhs-8X-aZ0">
                         <rect key="frame" x="0.0" y="0.0" width="386" height="203"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krz-WA-94L">
