--- a/woorischool/Views/Global/ModalViews/BoardListViewController.xib
+++ b/woorischool/Views/Global/ModalViews/BoardListViewController.xib
@@ -30,16 +30,16 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FjQ-VV-fNm">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="371"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="539"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="게시판 목록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHF-eg-daI">
-                                    <rect key="frame" x="20" y="32" width="83" height="21"/>
+                                    <rect key="frame" x="20" y="200" width="83" height="21"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
                                     <color key="textColor" name="greyishBrown"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7kV-LC-0yh">
-                                    <rect key="frame" x="13" y="61" width="388" height="300"/>
+                                    <rect key="frame" x="13" y="229" width="388" height="300"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="300" id="bei-x3-17H"/>
@@ -50,14 +50,22 @@
                                         <outlet property="delegate" destination="-1" id="16C-fK-jKG"/>
                                     </connections>
                                 </tableView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0td-Pb-zck" customClass="EmoInputView" customModule="우리스쿨" customModuleProvider="target">
+                                    <rect key="frame" x="20" y="20" width="374" height="160"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="SHF-eg-daI" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="20" id="7Z4-Ha-86i"/>
+                                <constraint firstItem="0td-Pb-zck" firstAttribute="top" secondItem="FjQ-VV-fNm" secondAttribute="top" constant="20" id="9Xk-2J-DNt"/>
+                                <constraint firstItem="0td-Pb-zck" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="20" id="F9K-ba-lAf"/>
                                 <constraint firstItem="7kV-LC-0yh" firstAttribute="top" secondItem="SHF-eg-daI" secondAttribute="bottom" constant="8" id="Huj-sb-fdj"/>
                                 <constraint firstItem="7kV-LC-0yh" firstAttribute="leading" secondItem="FjQ-VV-fNm" secondAttribute="leading" constant="13" id="Ma2-LC-sgy"/>
-                                <constraint firstItem="SHF-eg-daI" firstAttribute="top" secondItem="FjQ-VV-fNm" secondAttribute="top" constant="32" id="NeL-Sw-gPp"/>
+                                <constraint firstItem="SHF-eg-daI" firstAttribute="top" secondItem="FjQ-VV-fNm" secondAttribute="top" constant="200" id="NeL-Sw-gPp"/>
+                                <constraint firstAttribute="trailing" secondItem="0td-Pb-zck" secondAttribute="trailing" constant="20" id="gLK-eD-c2b"/>
                                 <constraint firstAttribute="trailing" secondItem="7kV-LC-0yh" secondAttribute="trailing" constant="13" id="u1L-HT-LfN"/>
+                                <constraint firstItem="SHF-eg-daI" firstAttribute="top" secondItem="0td-Pb-zck" secondAttribute="bottom" constant="20" id="vdL-IN-FBe"/>
                                 <constraint firstAttribute="bottom" secondItem="7kV-LC-0yh" secondAttribute="bottom" constant="10" id="xRz-xd-YMF"/>
                             </constraints>
                         </view>
